--- a/vista/styles/home.css
+++ b/vista/styles/home.css
@@ -579,52 +579,6 @@ nav ul button{
     color: var(--reaction-color);
 }
 
-.containerShowComment{
-    display: flex;
-    flex-direction: column;
-    background-color: transparent;
-}
-
-.comentario{
-    display: flex;
-    flex-direction: column;
-    background-color: var(--primary-color);
-    border-top: 1px var(--bg-color) solid;
-}
-
-.comentario .infoUser{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: start;
-    margin-bottom: 0;
-}
-
-.comentario .infoUser img{
-    border-radius: 50%;
-    margin-right: 10px;
-}
-
-.comentario .infoUser p{
-    font-size: 20px;
-    color: var(--text-color);
-    font-weight: bold;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.comentario .contenidoComment{
-    margin-top: -10px;
-    word-break: break-all;
-    padding-bottom: 0;
-}
-
-.comentario .contenidoComment p{
-    font-size: 22px;
-    color: var(--text-color);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-
 .containerButtonMoreComment{
     display: flex;
     justify-content: center;
@@ -765,6 +719,96 @@ nav ul button{
 }
 
 .containerTrendings p{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.pop-up-comentarios{
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.pop-up-wrap-comentarios{
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    display: inline;
+    width: 600px;
+    height: 500px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    border: 1px #ffffff solid;
+    overflow-y: scroll;
+}
+
+.pop-up-wrap-comentarios .containerTituloyBotonCerrar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0px;
+}
+
+.pop-up-wrap-comentarios .containerTituloyBotonCerrar p{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    margin-left: 220px;
+    margin-right: 165px;
+}
+
+
+.containerShowComment{
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+}
+
+.comentario{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--primary-color);
+    border-top: 1px var(--bg-color) solid;
+    padding: 0px 20px 0px 20px;
+}
+
+.comentario .infoUser{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: start;
+    margin-bottom: 0;
+}
+
+.comentario .infoUser img{
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.comentario .infoUser p{
+    font-size: 20px;
+    color: var(--text-color);
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.comentario .contenidoComment{
+    margin-top: -10px;
+    word-break: break-all;
+    padding-bottom: 0;
+}
+
+.comentario .contenidoComment p{
+    font-size: 22px;
+    color: var(--text-color);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -989,7 +1033,7 @@ nav ul button{
     margin-right: 130px;
 }
 
-.pop-up-wrap .containerTituloyBotonCerrar #buttonCerrarModal, #buttonCerrarModalPerfil, #buttonCerrarModalImagenPerfil, #buttonCerrarModalCambiarContraseña{
+.pop-up-wrap .containerTituloyBotonCerrar #buttonCerrarModal, #buttonCerrarModalPerfil, #buttonCerrarModalImagenPerfil, #buttonCerrarModalCambiarContraseña, #buttonCerrarModalComentarios{
     display: flex;
     align-items: center;
     background-color: transparent;
